Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/vulkan/in_arbeit/h/gstvkimagememory.h

#define __GST_VULKAN_IMAGE_MEMORY_H__
#define GST_TYPE_VULKAN_IMAGE_MEMORY_ALLOCATOR (gst_vulkan_image_memory_allocator_get_type())
extern
GType gst_vulkan_image_memory_allocator_get_type(void);
#define GST_IS_VULKAN_IMAGE_MEMORY_ALLOCATOR(obj)              (G_TYPE_CHECK_INSTANCE_TYPE ((obj), GST_TYPE_VULKAN_IMAGE_MEMORY_ALLOCATOR))
#define GST_IS_VULKAN_IMAGE_MEMORY_ALLOCATOR_CLASS(klass)      (G_TYPE_CHECK_CLASS_TYPE ((klass), GST_TYPE_VULKAN_IMAGE_MEMORY_ALLOCATOR))
#define GST_VULKAN_IMAGE_MEMORY_ALLOCATOR_GET_CLASS(obj)       (G_TYPE_INSTANCE_GET_CLASS ((obj), GST_TYPE_VULKAN_MEMORY_ALLOCATOR, GstVulkanImageMemoryAllocatorClass))
#define GST_VULKAN_IMAGE_MEMORY_ALLOCATOR(obj)                 (G_TYPE_CHECK_INSTANCE_CAST ((obj), GST_TYPE_VULKAN_MEMORY_ALLOCATOR, GstVulkanImageMemoryAllocator))
#define GST_VULKAN_IMAGE_MEMORY_ALLOCATOR_CLASS(klass)         (G_TYPE_CHECK_CLASS_CAST ((klass), GST_TYPE_VULKAN_MEMORY_ALLOCATOR, GstVulkanImageMemoryAllocatorClass))
/**
 * GST_VULKAN_IMAGE_MEMORY_ALLOCATOR_CAST:
 *
 * Since: 1.18
 */
#define GST_VULKAN_IMAGE_MEMORY_ALLOCATOR_CAST(obj)            ((GstVulkanImageMemoryAllocator *)(obj))
/**
 * GST_VULKAN_IMAGE_MEMORY_ALLOCATOR_NAME:
 *
 * Since: 1.18
 */
#define GST_VULKAN_IMAGE_MEMORY_ALLOCATOR_NAME "VulkanImage"
/**
 * GST_CAPS_FEATURE_MEMORY_VULKAN_IMAGE:
 *
 * Since: 1.18
 */
#define GST_CAPS_FEATURE_MEMORY_VULKAN_IMAGE "memory:VulkanImage"
/**
 * GstVulkanImageMemoryFindViewFunc:
 *
 * Function definition used to find views.  Return %TRUE if @view matches the
 * criteria.
 *
 * Since: 1.18
 */
typedef gboolean (*GstVulkanImageMemoryFindViewFunc) (GstVulkanImageView * view, gpointer user_data);
//////////////////G_DEFINE_AUTOPTR_CLEANUP_FUNC         (GstVulkanImageMemoryAllocator, gst_object_unref);

extern
void            gst_vulkan_image_memory_init_once       (void);
extern
gboolean        gst_is_vulkan_image_memory              (GstMemory * mem);
extern
gboolean        gst_vulkan_image_memory_init            (GstVulkanImageMemory * mem,
                                                         GstAllocator * allocator,
                                                         GstMemory * parent,
                                                         GstVulkanDevice * device,
                                                         VkFormat format,
                                                         VkImageUsageFlags usage,
                                                         VkImageLayout initial_layout,
                                                         GstAllocationParams * params,
                                                         gsize size,
                                                         gpointer user_data,
                                                         GDestroyNotify notify);
extern
GstMemory *     gst_vulkan_image_memory_alloc_with_image_info
                                                       (GstVulkanDevice * device,
                                                        VkImageCreateInfo * image_info,
                                                        VkMemoryPropertyFlags mem_prop_flags);
extern
GstMemory *     gst_vulkan_image_memory_alloc           (GstVulkanDevice * device,
                                                         VkFormat format,
                                                         gsize width,
                                                         gsize height,
                                                         VkImageTiling tiling,
                                                         VkImageUsageFlags usage,
                                                         VkMemoryPropertyFlags mem_prop_flags);
extern
GstMemory *     gst_vulkan_image_memory_wrapped         (GstVulkanDevice * device,
                                                         VkImage image,
                                                         VkFormat format,
                                                         gsize width,
                                                         gsize height,
                                                         VkImageTiling tiling,
                                                         VkImageUsageFlags usage,
                                                         gpointer user_data,
                                                         GDestroyNotify notify);
extern
guint32         gst_vulkan_image_memory_get_width       (GstVulkanImageMemory * image);
extern
guint32         gst_vulkan_image_memory_get_height      (GstVulkanImageMemory * image);
extern
GstVulkanImageView *gst_vulkan_image_memory_find_view   (GstVulkanImageMemory * image,
                                                         GstVulkanImageMemoryFindViewFunc find_func,
                                                         gpointer user_data) ;
extern
void            gst_vulkan_image_memory_add_view        (GstVulkanImageMemory * image,
                                                         GstVulkanImageView * view);